# ECOSTRESS-Collection-2

./: CMakeLists.txt  CalVal Extraction Development.ipynb  Collection 1 Granule Ingest.ipynb  ECOSTRESS.yml  ECOSTRESS_docker.yml  NTR_Questions.md  Project.toml  README.md  calval_preview.csv  get_IGBP.py  makefile  setup.cfg  setup.py
ECOSTRESS/: ECOSTRESS_C2.py  reprocess_JET.py
ECOv002/: ECOv002.py  __init__.py
ECOv002_DL/: ECOv002_DL.py  ECOv002_DL.xml  ECOv002_DL_cynthia.xml  ECOv002_DL_with_L3L4.xml  __init__.py
HDFEOS5/: HDFEOS5.py
L2T_STARS/: L2T_STARS.py
L2_LSTE/: L2_LSTE.py  L2_LSTE.xml  __init__.py
L3G_L4G_JET/: L3G_L4G_JET.py  L3G_L4G_JET.xml  __init__.py
L3T_L4T_JET/: L3T_L4T_JET.py  __init__.py
PGE/: ECOv002_DL.sh  L2G_L2T_RAD_LSTE.sh  L2T_STARS.sh  L3G_L4G_ALEXI.sh  L3G_L4G_JET.sh  L3G_L4G_PTJPL.sh  L3T_L4T_ALEXI.sh  L3T_L4T_JET.sh  L3T_L4T_PTJPL.sh
SRTM/: SRTM.py
VIIRS/: VIIRSDataPool.py  VNP09GA.py
VNP43NRT/: VNP43NRT.py
delivery_memos/: ECOv002_L2-L3-L4_v1.0.0-pre_DelMem.20210622v1.docx  ECOv002_L2-L3-L4_v1.0.1-pre_DelMem.20210630v1.docx  ECOv002_L2-L3-L4_v1.0.10-pre_DelMem.20210812v1.docx  ECOv002_L2-L3-L4_v1.0.11_DelMem.20210826v1.docx  ECOv002_L2-L3-L4_v1.0.12_DelMem.20210901v1.docx  ECOv002_L2-L3-L4_v1.0.13_DelMem.20211006v1.docx  ECOv002_L2-L3-L4_v1.0.14_DelMem.20211012v1.docx  ECOv002_L2-L3-L4_v1.0.15_DelMem.20211013v1.docx  ECOv002_L2-L3-L4_v1.0.16_DelMem.20211013v1.docx  ECOv002_L2-L3-L4_v1.0.17_DelMem.20211028v1.docx  ECOv002_L2-L3-L4_v1.0.18_DelMem.20211028v1.docx  ECOv002_L2-L3-L4_v1.0.19_DelMem.20211130v1.docx  (+77 more)
(+82 files in other folders)
