[metadata]
name = ECOSTRESS
description = ECOSTRESS Collection 2 Pipeline
long_description = file: README.md

[options.entry_points]
console_scripts =
    find-ECOSTRESS-C1-scene = ECOSTRESS.find_ECOSTRESS_C1_scene:main
    find-ECOSTRESS-C1-geometry = ECOSTRESS.find_ECOSTRESS_C1_geometry:main
    find-ECOSTRESS-C1-tile = ECOSTRESS.find_ECOSTRESS_C1_tile:main
    ECOSTRESS-C2 = ECOSTRESS.ECOSTRESS_C2:main
    reprocess-JET = ECOSTRESS.reprocess_JET:main
    ECOv002 = ECOv002.ECOv002:main
    L1_L2_RAD_LSTE = L1_L2_RAD_LSTE.L1_L2_RAD_LSTE:main
    test-L1_L2_RAD_LSTE = ECOSTRESS.test_L2G_L2T_LSTE:main
    ECOv002_DL = ECOv002_DL.ECOv002_DL:main
    L2T_STARS = L2T_STARS.L2T_STARS:main
    L3T_L4T_JET = L3T_L4T_JET.L3T_L4T_JET:main
    L3T_L4T_ALEXI = L3T_L4T_ALEXI.L3T_L4T_ALEXI:main
    L3G_L4G_JET = L3G_L4G_JET.L3G_L4G_JET:main
    L3G_L4G_ALEXI = L3G_L4G_ALEXI.L3G_L4G_ALEXI:main
    STARS-jl-instantiate = STARS_jl.instantiate:main
    VNP43NRT-jl-instantiate = VNP43NRT_jl.instantiate:main
